@@ -2,9 +2,9 @@ Package: BrailleR
 Type: Package
 Title: Improved Access for Blind Users
 Version: 0.25.5
-Date: 2016-12-26
+Date: 2017-01-06
 Author: A. Jonathan R. Godfrey [aut, cre], Donal Fitzpatrick [ctb], Duncan Murdoch [ctb], Greg Snow
-    [ctb], Henrik Bengtsson [ctb], James Curtis [ctb], JooYoung Seo [ctb], Paul Murrell [ctb], Timothy Bilton [ctb], Tony Hirst [ctb], Tsan-Kuang Lee [ctb], Volker Sorge [ctb], Yihui Xie
+    [ctb], Henrik Bengtsson [ctb], James Curtis [ctb], JooYoung Seo [ctb], Paul Murrell [ctb], Timothy Bilton [aut], Tony Hirst [ctb], Tsan-Kuang Lee [ctb], Volker Sorge [aut], Yihui Xie
     [ctb]
 Maintainer: A. Jonathan R. Godfrey <a.j.godfrey@massey.ac.nz>
 Authors@R: c(person("A. Jonathan R.", "Godfrey", role=c("aut", "cre"), email="a.j.godfrey@massey.ac.nz"),
@@ -15,10 +15,10 @@ Authors@R: c(person("A. Jonathan R.", "Godfrey", role=c("aut", "cre"), email="a.
     person("James", "Curtis", email = "james@curtis.net.nz", role = "ctb"),
     person("JooYoung", "Seo", email = "jooyoung@psu.edu", role = "ctb"),
     person("Paul", "Murrell", email = "paul@stat.auckland.ac.nz", role = "ctb"),
-    person("Timothy", "Bilton", email = "tbilton@gmail.com", role = "ctb"),
+    person("Timothy", "Bilton", email = "tbilton@gmail.com", role = "aut"),
     person("Tony", "Hirst", email = "tony.hirst@open.ac.uk", role = "ctb"),
     person("Tsan-Kuang", "Lee", email = "developer@tklee.com", role = "ctb"),
-    person("Volker", "Sorge", email = "v.sorge@mathjax.org", role = "ctb"),
+    person("Volker", "Sorge", email = "v.sorge@mathjax.org", role = "aut"),
     person("Yihui", "Xie", email = "xie@yihui.name", role = "ctb"))
 Description: Blind users do not have access to the graphical output from R
     without printing the content of graphics windows to an embosser of some kind. This
